# veritasSR-DC

./: .gitignore  CMakeLists.txt  README.md
50k_data/: obs_spitzer_50k.f32  obs_temp_50k.f32  ps_data_50k.f32
ex_1/: gen-3edge-exprs-0330-3.py  plot-3edge-exprs-0402-1.py  runexprs
ex_2/: ExprArray* generateBasicExpressions().cpp  ast_io.cpp  ast_io.h  ast_nodes.h  exprgen  exprgen.cpp  gen_x.ast  gen_x.ast.stats  infix_parsing_code.h  logging_code.h  runcpp  test_coeff_fit  testrun-2.md  testrun.md  testrun.mdd
ex_2/old-code/: main.cpp  old_exprgen.cpp
ex_3/: exprgen  gen_x.ast  gen_x.ast.stats  runcpp  testrun.md
ex_3/CODE_ARCHIVE/: main.cpp  old-code.txt  old_ast_nodes.h  old_expr_parser.cpp  old_exprgen.cpp  test_coeff_fit.cpp
ex_3/include/: ast_nodes.h  ast_nodestats.h  expr_array.h  expr_parser.h  expr_simplifier.h  util_code.h  var_table.h
ex_3/src/: ast_nodes.cpp  ast_nodestats.cpp  base_exprs.cpp  best_fit_coeffs.cpp  evolve_exprs.cpp  expr_array.cpp  expr_main.cpp  expr_parser.cpp  expr_simplifier.cpp  save-load-ast.cpp  util_code.cpp  var_table.cpp
ex_3_refactored/: CHANGELOG.md  README.md
ex_3_refactored/docs/: architecture.md
ex_3_refactored/include/: ast_nodes.h  infix_parsing_code.h  logging_code.h
ex_3_refactored/src/: main.cpp
ex_3_refactored/tests/: test_coeff_fit.cpp
ex_4_refactored/: LICENSE  exprgen  makefile  runcpp  testrun.md
ex_4_refactored/docs/: llm_refactor_prompt.md  refactoring_report.md
ex_4_refactored/include/: ast_nodes.h  evolve_expr.h  expr_array.h  exprgen.h
ex_4_refactored/src/: exprgen.cpp
(+59 files in other folders)
